include(canTaskLib)
ADD_LIBRARY(${CAN_TASKLIB_NAME} SHARED 
    ${CAN_TASKLIB_SOURCES})

TARGET_LINK_LIBRARIES(${CAN_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${CAN_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${CAN_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${CAN_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${CAN_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${CAN_TASKLIB_HEADERS}
    DESTINATION include/orocos/can)

